--- a/src/css/card.css
+++ b/src/css/card.css
@@ -12,11 +12,7 @@
     background: url("../assets/pokemon-background.jpg");
     background-position: center;
     background-size: contain;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
+    position: relative;
 }
 
 .card:hover{
@@ -24,8 +20,6 @@
 }
 
 .card.rotate{
-    background:url("../assets/pokemon-background.jpg");
-    background-size: contain;
     transform: rotate3d(0,1,0,180deg);
 }
 
@@ -34,18 +28,28 @@
     text-align: center;
     color: white;
     font-size: larger;
-    animation:glow 1s ease-in-out infinite alternate;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: 600;
     background-color: rgba(0, 0, 0, 0.215);
     width: 100%;
+    position: absolute;
+    bottom: 0;
+    filter: drop-shadow(2px 2px 2px rgb(0, 255, 247));
 }
 
-@keyframes glow {
-    0%{
-    filter: drop-shadow(3px 3px 5px rgb(255, 166, 0));
-    }
-    100%{
-    filter: drop-shadow(2px 2px 15px rgb(255, 166, 0));
-    }
+.card-image-wrapper{
+    width: 150px;
+    height: 190px;
+    backdrop-filter: blur(4px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-image-wrapper img{
+    transition: transform 0.9s;
+}
+
+.card-image-wrapper img:hover{
+    transform: scale(1.2);
 }
