--- a/src/css/appscreen.css
+++ b/src/css/appscreen.css
@@ -1,11 +1,20 @@
 .app-screen {
+    height: 100%;
     padding: 8px;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(30px);
     border: 2px solid white;
     text-align: center;
+    justify-self: center;
+    margin: 0 10px;
+    border-radius: 14px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
 
 .welcome {
+    margin-top: 30%;
     font-weight: 800;
     font-size: 1.3rem;
 }
@@ -26,15 +35,18 @@
     text-shadow: 3px 3px 10px rgb(255, 255, 255);
 }
 
+.instruction + p{
+    box-shadow: 0px 2px yellow;
+}
+
 .start-btn {
+    max-width: max-content;
     text-transform: capitalize;
     border: 2px solid white;
-    padding: 8px 20px;
+    padding: 4px 20px;
     font-size: 2rem;
+    font-weight: 800;
     border-radius: 8px;
     cursor: pointer;
-    color: transparent;
-    -webkit-text-stroke: 1px white;
-    text-shadow: 1px 1px 7px white;
-    background: rgba(255, 255, 0, 0.648);
+    text-shadow: 2px 2px 4px rgb(255, 255, 0);
 }
