add images in start and restart screen

--- a/src/css/appscreen.css
+++ b/src/css/appscreen.css
@@ -48,5 +48,17 @@
     font-weight: 800;
     border-radius: 8px;
     cursor: pointer;
-    text-shadow: 2px 2px 4px rgb(255, 255, 0);
+}
+
+.app-screen-image-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 300px;
+    max-height: 350px;
+    border-radius: 8px;
+    overflow: hidden;
+}
+.app-screen-image-wrapper img{
+    width: 100%;
 }
