--- a/src/css/gameover.css
+++ b/src/css/gameover.css
@@ -8,15 +8,30 @@
     width: 100vw;
     backdrop-filter: blur(10px);
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 20px;
 }
 
 .restart-btn{
-    border: none;
-    padding: 14px;
-    font-size: x-large;
-    border-radius: 8px;
-    box-shadow: 4px 4px 8px white;
     cursor: pointer;
+    max-width: max-content;
+    text-transform: capitalize;
+    border: 2px solid white;
+    padding: 4px 20px;
+    font-size: 2rem;
+    font-weight: 800;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.game-over-img-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 300px;
+    max-height: 350px;
+    border-radius: 8px;
+    overflow: hidden;
 }
